--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Cluster Connectivity Visualizer</title>
+    <title>Network Policy Visualizer</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Cluster Connectivity Analyzer</h1>
+        <h1>Network Policy Visualizer</h1>
         
         <div class="section">
             <h2>Connectivity Check</h2>
